[FLINK-33309] Add -Djava.security.manager=allow